--- a/printer.cfg
+++ b/printer.cfg
@@ -1,125 +1,3 @@
-# This file contains common pin mappings for the BIGTREETECH SKR
-# MINI. To use this config, the firmware should be compiled for the
-# STM32F103 with a "28KiB bootloader".
-
-# The "make flash" command does not work on the SKR mini. Instead,
-# after running "make", copy the generated "out/klipper.bin" file to a
-# file named "firmware.bin" on an SD card and then restart the SKR
-# mini with that SD card.
-
-# See the example.cfg file for a description of available parameters.
-
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_31FFD1054242363140750357-if00
-
-[stepper_x]
-step_pin: PB13
-dir_pin: !PB12
-enable_pin: !PB14
-step_distance: .0125
-endstop_pin: PC0
-position_endstop: 120
-position_max: 120
-homing_speed: 60   #Max 100
-homing_retract_dist: 5
-homing_positive_dir: true
-second_homing_speed: 10
-
-[tmc2209 stepper_x]
-uart_pin: PB15
-microsteps: 16
-interpolate: True
-run_current: .25
-hold_current: .25
-sense_resistor: 0.110
-stealthchop_threshold: 500
-
-[stepper_y]
-step_pin: PB10
-dir_pin: !PB2
-enable_pin: !PB11
-step_distance: .0125
-endstop_pin: PC1
-position_endstop: 120
-position_max: 120
-homing_speed: 60
-homing_retract_dist: 5
-homing_positive_dir: true
-second_homing_speed: 10
-
-[tmc2209 stepper_y]
-uart_pin: PC6
-microsteps: 16
-interpolate: True
-run_current: .25
-hold_current: .25
-sense_resistor: 0.110
-stealthchop_threshold: 500
-
-[stepper_z]
-step_pin: PB0
-dir_pin: !PC5
-enable_pin: !PB1
-step_distance: 0.0025
-endstop_pin: PC2
-position_endstop: -1
-position_max: 120
-position_min: -1
-homing_speed: 20
-second_homing_speed: 3.0
-homing_retract_dist: 3.0
-
-[tmc2209 stepper_z]
-uart_pin: PC10
-microsteps: 16
-interpolate: True
-run_current: .25
-hold_current: 0.25
-sense_resistor: 0.110
-stealthchop_threshold: 500
-
-
-[extruder]
-step_pin: PB3
-dir_pin: !PB4
-enable_pin: !PD2
-step_distance: .002424
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PC8
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: PA0
-#control: pid
-#pid_Kp: 22.2
-#pid_Ki: 1.08
-#pid_Kd: 114
-min_temp: 0
-max_temp: 270
-min_extrude_temp: 170
-max_extrude_only_distance: 780.0
-max_extrude_cross_section: .8
-Pressure_advance: 0.0
-pressure_advance_smooth_time: 0.040
-
-[tmc2209 extruder]
-uart_pin: PC11
-microsteps: 16
-interpolate: True
-run_current: 0.2
-hold_current: 0.2
-sense_resistor: 0.110
-stealthchop_threshold: 500
-
-[heater_bed]
-heater_pin: PC12
-sensor_type: NTC 100K MGB18-104F39050L32 # "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
-sensor_pin: PC3
-smooth_time: 3.0
-max_power: 1.0
-#control: watermark
-min_temp: 0
-max_temp: 110
-
 [printer]
 kinematics: corexy
 max_velocity: 250
@@ -128,56 +6,20 @@ max_z_velocity: 10
 max_z_accel: 30
 square_corner_velocity: 5.0
 
-[heater_fan hotend_fan]
-# Hotend Fan
-pin: PA8
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
-#If you are experiencing back flow, you can reduce fan_speed
-# fan_speed: 1.0
-
-[fan]
-# Print Cooling Fan - XYE board, Fan Pin
-pin: PC9
-kick_start_time: 0.5
-#depending on your fan, you may need to increase or reduce this value
-#if your fan will not start
-off_below: 0.13
-cycle_time: 0.001
-
-[idle_timeout]
-timeout: 1800
-
-[skew_correction]
-
-[respond]
-default_type: echo
-
-[include settings/*.cfg]
-[include macros/*.cfg]
-
-# Sensor Types
-#   "EPCOS 100K B57560G104F"
-#   "ATC Semitec 104GT-2"
-#   "NTC 100K beta 3950"
-#   "Honeywell 100K 135-104LAG-J01"
-#   "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
-#   "AD595"
-#   "PT100 INA826"
+[include common/*.cfg]
+[include voron0.043/*.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 29.093
-#*# pid_ki = 1.796
-#*# pid_kd = 117.828
+#*# pid_kp = 28.637
+#*# pid_ki = 1.720
+#*# pid_kd = 119.200
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 58.733
-#*# pid_ki = 3.108
-#*# pid_kd = 277.511
+#*# pid_kp = 55.052
+#*# pid_ki = 2.960
+#*# pid_kd = 255.992
