--- a/common/filament.cfg
+++ b/common/filament.cfg
@@ -32,7 +32,7 @@ gcode:
     {% if printer.toolhead.status == "Ready" %}
         EXTRUDE DISTANCE=100
     {% else %}
-      { printer.gcode.action_respond_info("Filament-only moves disabled while printing!") }
+      { action_respond_info("Filament-only moves disabled while printing!") }
     {% endif %}
 
 [gcode_macro LOAD_FILAMENT]
@@ -43,7 +43,7 @@ gcode:
     {% if printer.toolhead.status == "Ready" %}
         EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={DISTANCE|float}
     {% else %}
-      { printer.gcode.action_respond_info("Filament-only moves disabled while printing!") }
+      { action_respond_info("Filament-only moves disabled while printing!") }
     {% endif %}
 
 [gcode_macro UNLOAD_FILAMENT]
@@ -57,7 +57,7 @@ gcode:
         EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={PULL_DISTANCE|float}
         M18 E
         {% else %}
-      { printer.gcode.action_respond_info("Filament-only moves disabled while printing!") }
+      { action_respond_info("Filament-only moves disabled while printing!") }
     {% endif %}
 
 [gcode_macro PURGE_LINE]
