--- a/voron0.043/mcu.cfg
+++ b/voron0.043/mcu.cfg
@@ -15,5 +15,5 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_31FFD1054242363140750357-if00
 # are connected to the main micro-controller. The rpi microcontroller is used
 # on non time-critical functions such as enclosure sensors, additional fan or
 # light sources
-[mcu host]
-serial: /tmp/klipper_host_mcu
+# [mcu host]
+# serial: /tmp/klipper_host_mcu
