uplevel: move to mailsail and latest klipper

--- a/common/filament.cfg
+++ b/common/filament.cfg
@@ -1,8 +1,8 @@
 [gcode_macro EXTRUDE]
-default_parameter_MINTEMP=195
-default_parameter_DISTANCE=100
-default_parameter_FEEDRATE=300
 gcode:
+    {% set MINTEMP = params.MINTEMP|default(195) %}
+    {% set DISTANCE = params.DISTANCE|default(100) %}
+    {% set FEEDRATE = params.FEEDRATE|default(300) %}
     SAVE_GCODE_STATE NAME=EXTRUDE_state
     {% if printer.extruder.temperature < MINTEMP and printer.extruder.target > MINTEMP|int %}
         M109 S{printer.extruder.target} ; wait for previous M104
@@ -14,9 +14,9 @@ gcode:
     RESTORE_GCODE_STATE NAME=EXTRUDE_state
 
 [gcode_macro FILAMENT_TO_PARK]
-default_parameter_FORCED=0
 variable_loaded: 0
 gcode:
+    {% set FORCED = params.FORCED|default(0) %}
     {% if loaded or FORCED==1 %}
         EXTRUDE FEEDRATE=2100 DISTANCE=-10
         SET_GCODE_VARIABLE MACRO=FILAMENT_TO_PARK VARIABLE=loaded VALUE=0
@@ -36,9 +36,9 @@ gcode:
     {% endif %}
 
 [gcode_macro LOAD_FILAMENT]
-default_parameter_DISTANCE=380
-default_parameter_FEEDRATE=1500
 gcode:
+    {% set DISTANCE = params.DISTANCE|default(380) %}
+    {% set FEEDRATE = params.FORCED|default(1500) %}
     {% set min_extrude_temp = printer.configfile.config["extruder"]["min_extrude_temp"] %}
     {% if printer.toolhead.status == "Ready" %}
         EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={DISTANCE|float}
@@ -47,10 +47,10 @@ gcode:
     {% endif %}
 
 [gcode_macro UNLOAD_FILAMENT]
-default_parameter_PUSH_DISTANCE=10
-default_parameter_PULL_DISTANCE=-380
-default_parameter_FEEDRATE=2100
 gcode:
+    {% set PUSH_DISTANCE = params.PUSH_DISTANCE|default(10) %}
+    {% set PULL_DISTANCE = params.PULL_DISTANCE|default(-380) %}
+    {% set FEEDRATE = params.FEEDRATE|default(2100) %}
     {% set min_extrude_temp = printer.configfile.config["extruder"]["min_extrude_temp"] %}
     {% if printer.toolhead.status == "Ready" %}
         EXTRUDE MINTEMP={min_extrude_temp|float} DISTANCE={1 * PUSH_DISTANCE|float}
@@ -61,14 +61,13 @@ gcode:
     {% endif %}
 
 [gcode_macro PURGE_LINE]
-default_parameter_X=40
-default_parameter_Y=2.5
-default_parameter_TRAVEL=40
-default_parameter_EXTRUDE=12.0
-default_parameter_PURGE_RATE=500
-default_parameter_MOVE_RATE=21000
-
 gcode:
+    {% set X = params.X|default(40) %}
+    {% set Y = params.Y|default(2.5) %}
+    {% set TRAVEL = params.TRAVEL|default(40) %}
+    {% set EXTRUDE = params.EXTRUDE|default(12) %}
+    {% set PURGE_RATE = params.PURGE_RATE|default(500) %}
+    {% set MOVE_RATE = params.MOVE_RATE|default(21000) %}
     SAVE_GCODE_STATE NAME=PURGE_state
     G0 X{X|float} Y{Y|float} F{MOVE_RATE|float}
     G1 Z0.2 F500.0
