--- a/common/gcode_override.cfg
+++ b/common/gcode_override.cfg
@@ -1,7 +1,3 @@
-[gcode_macro M73] # Set Print Progress
-gcode:
-    RESPOND MSG=""
-
 [gcode_macro M105]
 variable_lights: 0
 rename_existing: M105.1
@@ -15,19 +11,16 @@ gcode:
 gcode:
     RESPOND TYPE=command MSG="ACK: M108 Break and Continue"
 
-[gcode_macro M117] # Set LCD message
-gcode:
-
 # M300 : Play tone, Beeper support, as commonly found on usual LCD displays
 # i.e. RepRapDiscount 2004 Smart Controller, RepRapDiscount 12864 Full Graphic
 # This defines a custom I/O pin and a custom GCODE macro
 # Usage: M300 [P<ms>] [S<Hz>]      P is the tone duration, S the tone frequency.
 # as it is based on a PWM duty cycle, the frequency won't be pitch perfect.
 [gcode_macro M300]
-default_parameter_PIN=null
-default_parameter_S=1000    # Allows for a default 1kHz tone if S is omitted
-default_parameter_P=100     # Allows for a default 10ms duration is P is omitted
 gcode:
+    {% set PIN = params.PIN|default(null) %}
+    {% set S = params.S|default(1000) %}
+    {% set P = params.P|default(100) %}
     SET_PIN PIN={PIN} VALUE={S}
     G4 P{P}
     SET_PIN PIN={PIN} VALUE=0
