--- a/common/heatsoak.cfg
+++ b/common/heatsoak.cfg
@@ -1,9 +1,9 @@
 [gcode_macro HEATSOAK]
-default_parameter_DURATION=300
-default_parameter_TARGET=97
-default_parameter_MOVE=1
-default_parameter_FAN=50
 gcode:
+    {% set DURATION = params.DURATION|default(300) %}
+    {% set TARGET = params.TARGETE|default(97) %}
+    {% set MOVE = params.MOVE|default(1) %}
+    {% set FAN = params.FAN|default(50) %}
     SAVE_GCODE_STATE NAME=HEATSOAK_state
     RESPOND TYPE=command MSG="Heatsoak: {TARGET}c for {DURATION}s"
     M117 Heatsoak: {TARGET}c for {DURATION}s
