--- a/common/led.cfg
+++ b/common/led.cfg
@@ -1,9 +1,9 @@
 [gcode_macro SET_TEMP_LIGHTS]
-default_parameter_LED=my_led
 variable_red: 1
 variable_green: 1
 variable_blue: 1
 gcode:
+  {% set LED = params.LED|default("my_led") %}
   #if the extruder is off
   {% if printer.extruder.target == 0 %}
     #Set the LED to red if the extruder is off but is still hot, otherwise
