--- a/common/move.cfg
+++ b/common/move.cfg
@@ -1,6 +1,6 @@
 [gcode_macro HOME]
-default_parameter_FORCED=0
 gcode:
+    {% set FORCED = params.FORCED|default(0) %}
     {% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes or "z" not in printer.toolhead.homed_axes or FORCED == 1 %}
         M117 Homing...
         G28
@@ -8,10 +8,10 @@ gcode:
     {% endif %}
 
 [gcode_macro MOVE_TO_SERVICE]
-default_parameter_X=60
-default_parameter_Y=5
-default_parameter_Z=90
-default_parameter_FEEDRATE=21000
 gcode:
+    {% set X = params.X|default(60) %}
+    {% set Y = params.Y|default(5) %}
+    {% set Z = params.Z|default(90) %}
+    {% set FEEDRATE = params.FEEDRATE|default(21000) %}
     HOME
     G1 X{X|int} Y{Y|int} Z{Z|int} F{FEEDRATE|int}
