--- a/voron0.043/heaters.cfg
+++ b/voron0.043/heaters.cfg
@@ -11,7 +11,8 @@
 step_pin: PB3
 dir_pin: !PB4
 enable_pin: !PD2
-step_distance: .002424
+rotation_distance: 7.7568
+microsteps: 16
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PC8
@@ -27,7 +28,6 @@ pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: PC11
-microsteps: 16
 interpolate: True
 run_current: 0.30
 hold_current: 0.30
