--- a/voron0.043/steppers.cfg
+++ b/voron0.043/steppers.cfg
@@ -2,7 +2,8 @@
 step_pin: PB13
 dir_pin: !PB12
 enable_pin: !PB14
-step_distance: .0125
+rotation_distance: 40
+microsteps: 16
 endstop_pin: PC0
 position_endstop: 120
 position_max: 120
@@ -13,7 +14,6 @@ second_homing_speed: 10
 
 [tmc2209 stepper_x]
 uart_pin: PB15
-microsteps: 16
 interpolate: True
 run_current: .30
 hold_current: .30
@@ -24,7 +24,8 @@ stealthchop_threshold: 500
 step_pin: PB10
 dir_pin: !PB2
 enable_pin: !PB11
-step_distance: .0125
+rotation_distance: 40
+microsteps: 16
 endstop_pin: PC1
 position_endstop: 120
 position_max: 120
@@ -35,7 +36,6 @@ second_homing_speed: 10
 
 [tmc2209 stepper_y]
 uart_pin: PC6
-microsteps: 16
 interpolate: True
 run_current: .35
 hold_current: .35
@@ -46,7 +46,8 @@ stealthchop_threshold: 500
 step_pin: PB0
 dir_pin: !PC5
 enable_pin: !PB1
-step_distance: 0.0025
+rotation_distance: 8
+microsteps: 16
 endstop_pin: PC2
 position_endstop: -1
 position_max: 120
@@ -57,7 +58,6 @@ homing_retract_dist: 3.0
 
 [tmc2209 stepper_z]
 uart_pin: PC10
-microsteps: 16
 interpolate: True
 run_current: .30
 hold_current: .30
