uplevel to latest klipper, mainsail, and moonraker

--- a/common/filament.cfg
+++ b/common/filament.cfg
@@ -29,22 +29,14 @@ gcode:
 
 [gcode_macro MEASURE_FILAMENT]
 gcode:
-    {% if printer.toolhead.status == "Ready" %}
-        EXTRUDE DISTANCE=100
-    {% else %}
-      { action_respond_info("Filament-only moves disabled while printing!") }
-    {% endif %}
+    EXTRUDE DISTANCE=100
 
 [gcode_macro LOAD_FILAMENT]
 gcode:
     {% set DISTANCE = params.DISTANCE|default(380) %}
-    {% set FEEDRATE = params.FORCED|default(1500) %}
+    {% set FEEDRATE = params.FEEDRATE|default(1500) %}
     {% set min_extrude_temp = printer.configfile.config["extruder"]["min_extrude_temp"] %}
-    {% if printer.toolhead.status == "Ready" %}
-        EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={DISTANCE|float}
-    {% else %}
-      { action_respond_info("Filament-only moves disabled while printing!") }
-    {% endif %}
+    EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={DISTANCE|float}
 
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
@@ -52,13 +44,9 @@ gcode:
     {% set PULL_DISTANCE = params.PULL_DISTANCE|default(-380) %}
     {% set FEEDRATE = params.FEEDRATE|default(2100) %}
     {% set min_extrude_temp = printer.configfile.config["extruder"]["min_extrude_temp"] %}
-    {% if printer.toolhead.status == "Ready" %}
-        EXTRUDE MINTEMP={min_extrude_temp|float} DISTANCE={1 * PUSH_DISTANCE|float}
-        EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={PULL_DISTANCE|float}
-        M18 E
-        {% else %}
-      { action_respond_info("Filament-only moves disabled while printing!") }
-    {% endif %}
+    EXTRUDE MINTEMP={min_extrude_temp|float} DISTANCE={1 * PUSH_DISTANCE|float}
+    EXTRUDE FEEDRATE={FEEDRATE|float} MINTEMP={min_extrude_temp|float} DISTANCE={PULL_DISTANCE|float}
+    M18 E
 
 [gcode_macro PURGE_LINE]
 gcode:
