--- a/common/print.cfg
+++ b/common/print.cfg
@@ -6,8 +6,8 @@ gcode:
     SET_SKEW XY=141.04,140.40,99.68
     G1 X40 Y20 Z20 F3000
     PURGE_LINE
-    #SET_PRESSURE_ADVANCE ADVANCE=0.40 # Yellow PLA, Blue ABS
-    SET_PRESSURE_ADVANCE ADVANCE=0.50 # Green ABS
+    SET_PRESSURE_ADVANCE ADVANCE=0.40 # Yellow PLA, Blue ABS
+    #SET_PRESSURE_ADVANCE ADVANCE=0.50 # Green ABS
 
 [gcode_macro PRINT_END]
 gcode:
